Changed to links

--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
         <div class="hero-body">
           <button id="toTop">
             <a href="#home">
-              <!-- <img src="/wedding-invite/image/arrow_up.svg"> -->
-              <img src="/image/arrow_up.svg">
+              <img src="/wedding-invite/image/arrow_up.svg">
+              <!-- <img src="/image/arrow_up.svg"> -->
             </a>
             <!-- &#11121; -->
           </button>
@@ -186,7 +186,7 @@
         
         <div data-aos="fade-up" data-aos-easing="linear">
           <!-- <img src="/wedding-invite/image/parents.png" class="bismillah has-text-centered" alt="A letter from parents."> -->
-          <img src="/image/parents.png" class="bismillah has-text-centered" alt="A letter from parents.">
+          <img src="https://i.ibb.co/sQJNvy8/parents.png" class="bismillah has-text-centered" alt="A letter from parents.">
         </div>
 
         <p class="bodytext" data-aos="fade-up" data-aos-easing="linear">
