--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
 
     <meta property="og:title" content="Wedding of Poulomi & Arpan - Sunday, 20 November 2022">
     <meta property="og:description" content="Wedding of Poulomi & Arpan - Sunday, 20 November 2022 at Rajeswari Palace, Rupnarayanpur West Bengal">
-    <meta property="og:locale" content="id_ID" />
     <meta property="og:image" content="https://i.ibb.co/TPtSFby/thumbnail.jpg">
-    <!-- <meta property="og:url" content="http://sherly.dae.ng/index.html"> -->
     <!-- Bulma Version 0.8.x-->
     <link rel="stylesheet" href="https://unpkg.com/bulma@0.8.0/css/bulma.min.css" />
     <link rel="stylesheet" href="https://unpkg.com/bulma-tooltip@0.1.5/dist/bulma-tooltip.min.css" />
@@ -165,8 +163,8 @@
           <br /><br />
           পৌলমী অর্পণের দুটি হৃদয় কে  বৈদিক মন্ত্রচ্চারণ ও হলুদ সুতোর নিবিড় বন্ধনে বাঁধতে আমরা দুই পরিবার আগামী ৩ রা অগ্রহায়ণ (ইং :  ২০ নভেম্বর) রবিবার এদের শুভ পরিণয়ের আয়োজন করেছি ।
           <br/><br />
-          এই মঙ্গল অনুষ্ঠানে আপনার সবান্ধব উজ্জ্বল উপস্থিতি আমাদের একান্ত কাম্য ।
-          <br/><br />
+          এই মঙ্গল অনুষ্ঠানে আপনার <!-- সবান্ধব --> উজ্জ্বল উপস্থিতি আমাদের একান্ত কাম্য ।
+          <br/>          <br />
           বিনীত,
           <br/>
           শ্রীযুক্ত পীযূষ রঞ্জন দাস
