--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script src="js/jquery.coundown.js"></script>
     <link rel="icon" type="image/png" href="image/favicon.png" />
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet">
+    <!-- <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"> -->
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-23064379-20"></script>
     <!-- Begin Script for Countdown -->
@@ -226,7 +226,7 @@
               class="column is-3 has-vertically-aligned-content">
             
               <p class="is-larger has-text-centered">
-                  <div class="waktu tanggal-hari has-text-centered">Sunday, 
+                  <div class="waktu tanggal-hari has-text-centered dusty-pink-darkest">Sunday, 
                   <span class="waktu tanggal-angka has-text-centered">20<sup>th</sup></span>
                   </div>
                   <div class="waktu tanggal-bulan has-text-centered">November 2022</div>
@@ -253,7 +253,7 @@
               
           </div>
         </div>
-        <div class="space40px"></div>
+        <!-- <div class="space40px"></div> -->
         <!-- <div class="main-content has-text-centered" data-aos="fade-up" data-aos-easing="linear">
           <a href="https://calendar.google.com/calendar/event?action=TEMPLATE&tmeid=MzJlZ2I5b2pyaGIwb3ViNnRlc2Nwb3RmNzkgcGQxOTk3MjAwMkBt&tmsrc=pd19972002%40gmail.com"  class="button has-tooltip btn-cta" data-tooltip="Add to Calendar" target="_blank" data-aos="zoom-in">
             <i class="far fa-calendar-plus"></i>
